--- a/ui/assets/styles/blue-theme.css
+++ b/ui/assets/styles/blue-theme.css
@@ -3550,7 +3550,7 @@ section {
   --color: #1f2c33;
   --fill: #d9e7ed;
   --stroke: #d9e7ed;
-  --stroke-hover: #c4dae3;
+  --stroke-hover: #afcdd9;
   --no-data-color: #3c5563;
   --no-data-fill: #ebebeb;
   --no-data-stroke: #ebebeb; }
