--- a/ui/assets/styles/dark-theme.css
+++ b/ui/assets/styles/dark-theme.css
@@ -3558,7 +3558,7 @@ section {
   --color: #eeeeee;
   --fill: #3d5059;
   --stroke: #3d5059;
-  --stroke-hover: #314047;
+  --stroke-hover: #242f35;
   --no-data-color: #eeeeee;
   --no-data-fill: #383838;
   --no-data-stroke: #383838; }
