--- a/ui/assets/styles/hc-dark.css
+++ b/ui/assets/styles/hc-dark.css
@@ -3507,7 +3507,7 @@ section {
   --color: #eeeeee;
   --fill: #335463;
   --stroke: #335463;
-  --stroke-hover: #29434f;
+  --stroke-hover: #1e323b;
   --no-data-color: #cacaca;
   --no-data-fill: #111111;
   --no-data-stroke: #111111; }
