--- a/ui/assets/styles/hc-light.css
+++ b/ui/assets/styles/hc-light.css
@@ -3504,7 +3504,7 @@ section {
   --color: #1f2c33;
   --fill: #aad7e9;
   --stroke: #aad7e9;
-  --stroke-hover: #92cce3;
+  --stroke-hover: #79c0dc;
   --no-data-color: #1f2c33;
   --no-data-fill: #f3f3f3;
   --no-data-stroke: #f3f3f3; }
